--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="info-header">
       <h1>Your questions may lead to a new discovery!</h1>
         <div class="bottom-text">
-          <h4>An open, friendly and conversational community for everyone</h4>
+          <h4>An open, friendly and conversational community for everyone.</h4>
           <button class="ui button large   call-modal  basic button">Get Started Now</button>
       </div>
       </div>
