--- a/app/views/layouts/display.html.erb
+++ b/app/views/layouts/display.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Onozor</title>
+      <%= metamagic %>
       <%= csrf_meta_tags %>
       <%= stylesheet_link_tag  'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.0/semantic.min.css', 'application', media: "all", "data-turbolinks-track" => true %>
       <%= javascript_include_tag  'application', "data-turbolinks-track" => true %>
@@ -25,6 +25,7 @@
       <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
       <meta name="theme-color" content="#ffffff">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+      <link rel="image_src" href="http://res.cloudinary.com/sportbay-co/image/upload/v1478176359/Favicon/android-icon-192x192.png" />
 
   </head>
   <body>
