--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
+<%
+meta title: "#{@user.fullname} - Onozor",
+     description: "#{@user.bio || @user.fullname + 'using Onozor to ask question, answer questions, and comment on peoples questions.'}"
+%>
+
 <div class="pusher">
 <div class="ui stackable fluid">
   <div id='timeline'></div>
@@ -64,7 +69,7 @@
        </div>
      </div>
      <div class="eight wide column">
-       <div class="ui card  fluid">
+       <!-- <div class="ui card  fluid">
          <div class="notification-label">
            <h3>Total Appreciations</h3>
          </div>
@@ -78,7 +83,7 @@
          <div class="notifications">
            <a href="#">El Mehdi and 1 other followed you.</a>  <span class="ui pull-right">3 days ago</span>
          </div>
-       </div>
+       </div> -->
      </div>
    </div>
  </div>
