--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,24 +1,24 @@
-<%= render partial: "layouts/navbartag" %> 
+<%= render partial: "layouts/navbartag" %>
 
 <div class="bs-docs-header container" id="content" tabindex="-1">
-     <h1>Discover Nodes</h1>
-     <p>Browse and follow technologies you care about.</p>
+     <h1>Discover Tags</h1>
+     <p>Browse and follow tags you care about.</p>
 </div>
 
 
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
-      <div class="card">
-        <p>Search Category</p>
-        <input type="text" class="form-control" id="exampleInputAmount" placeholder="Search..">
-      </div>
+      <!-- <div class="card">
+        <p>Search tags</p>
+        <input type="text" class="form-control" id="exampleInputAmount" placeholder="Search tags..">
+      </div> -->
       <div class="list-group list-group-card">
         <a href="#" class="list-group-item disabled">
           Categories
         </a>
         <% @categories.each do |category| %>
-          <%= link_to category.name, tags_category_path(category.name), class: 'list-group-item', remote: true %>
+          <%= link_to category.name, tags_category_path(category.slug), class: 'list-group-item', remote: true %>
         <% end %>
       </div>
     </div>
@@ -26,16 +26,7 @@
     <div class="col-xs-12 col-sm-12 col-md-8">
         <div class="row" id="tags">
             <% @tags.each do |tag| %>
-              <div class="col-sm-4 col-md-5 col-lg-4">
-                <div class="thumbnail">
-                  <%=link_to (image_tag "https://res.cloudinary.com/hashnode/image/upload/w_400,h_400,c_thumb/v1450467384/rjxy8xoreclzppwynucv.png", class: "img-circle"), tag_path(tag.name) %>
-                  <div class="caption">
-                    <h5 class="text-center"><%= link_to tag.name.capitalize, tag_path(tag) %></h5>
-                    <p class="text-center"><%= pluralize tag.taggings_count, "Content" %></p>
-                    <p class="text-center"><a href="#" class="btn btn-info btn-lg text-center" role="button">Follow</a></p>
-                  </div>
-                </div>
-              </div>
+              <%= render partial: 'tags/tag', locals: {:tag => tag} %>
             <% end %>
         </div>
     </div>
@@ -44,8 +35,20 @@
 
 <style media="screen">
 .thumbnail>img, .thumbnail a>img {
-    height: 150px !important;
+    height: 105px !important;
 }
+
+.change-link-size, .change-link-size:hover {
+  font-weight: 700;
+  font-size: larger;
+  color: black !important;
+  text-transform: capitalize;
+  text-decoration: none !important;
+}
+
+  .container{
+    max-width:1264px !important;
+  }
 
 
 .bs-docs-nav {
