--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,8 @@
-<% title "All Questions & Answers - Onozor" %>
+<%
+meta title: "Home - Onozor",
+     description: "Onozor is a question-and-answer site where questions are asked, answered, edited and organized by its community of users.",
+     keywords: %w(Question Answer Comment Tags Categories follow Profile)
+%>
 <%= content_tag :div, id: "questions", class: 'panel panel-default', data: { url: questions_path(@question) } do %>
   <%= render @questions, :collection => @question %>
 <% end %>
