--- a/app/views/layouts/_navbartag.html.erb
+++ b/app/views/layouts/_navbartag.html.erb
@@ -2,7 +2,6 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <%=link_to (image_tag current_user.avatar.url(:thumb), class:'nav-image img-circle navbar-toggle collapsed', width: '30px'), "#", style: 'padding: 0px', data: {  toggle:"dropdown", role:"button", haspopup:"true", expanded:"false" }  %>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -19,30 +18,9 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
+    <% if current_user %>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <!-- <li><a href="#">Topics <span class="sr-only">(current)</span></a></li> -->
-        <!-- <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li> -->
-      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <form class="navbar-form navbar-left">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <!-- <button type="submit" class="btn btn-default">Submit</button> -->
-        </form>
         <li class="notification">
           <% if current_user.activities.unseen.count > 0 %>
             <a class="notification-count"><%= current_user.activities.unseen.count  %></a>
@@ -63,6 +41,7 @@
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
+    <% end %>
   </div><!-- /.container-fluid -->
 </nav>
 
