--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for @tag do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
+  <%= f.input :short_description %>
   <%= f.input :image, as: :file %>
   <%= f.input :banner, as: :file %>
   <%= f.association :category %>
