--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -6,9 +6,9 @@
       <p class="text-center" id="follow-tag-count-<%= tag.id %>"><%= pluralize tag.users.count, "followers" %></p>
       <p class="text-center" id="follow-tag-button-<%= tag.id %>">
         <% if current_user && current_user.following_tag?(tag) %>
-          <%= render partial: 'tags/unfollow', locals: {:tag => tag} %>
+          <%= render partial: 'tags/unfollow', locals: {:tag => tag} if current_user %>
         <% else %>
-          <%= render partial: 'tags/follow', locals: {:tag => tag} %>
+          <%= render partial: 'tags/follow', locals: {:tag => tag} if current_user %>
         <% end %>
       </p>
     </div>
