--- a/app/views/user_mailer/answer_update.html.erb
+++ b/app/views/user_mailer/answer_update.html.erb
@@ -3,6 +3,6 @@
         <h3>Hi  <%= (@question_owner.username.titleize) %>, </h3>
         <p><%=  (@user.username.titleize)  %> has an answer to your question: <b><%= @question.name %></b></p>
         <p>click the link below to reply</p>
-        <%= question_url (@question) %>
+        <%#= question_url (@question) %>
     </body>
 </html>
