feat(): add user serilizer

--- a/app/views/user_mailer/login_link.html.erb
+++ b/app/views/user_mailer/login_link.html.erb
@@ -4,7 +4,7 @@
         <p>Following is the magic link for quickly signing in to Hashnode.</p>
         <p>click the link below to login</p>
         
-        <%= link_to "http://localhost:4200/authenticate/login-token/#{ @user.login_token }", "http://localhost:4200/authenticate/login-token/#{ @user.login_token }" %>
+        <%= link_to "http://localhost:4200/#/authenticate/login-token/#{ @user.login_token }", "http://localhost:4200/#/authenticate/login-token/#{ @user.login_token }" %>
         <p>See you soon!</p>
         <p>Cheers,</p>
         <p>Onozor Team</p>
