configure send grid

--- a/app/views/user_mailer/login_link.html.erb
+++ b/app/views/user_mailer/login_link.html.erb
@@ -1,7 +1,7 @@
 <html>
     <body>
         <h3>Hey there! 👋 </h3>
-        <p>Following is the magic link for quickly signing in to Hashnode.</p>
+        <p>Following is the magic link for quickly signing in to Onozor.</p>
         <p>click the link below to login</p>
         
         <%= link_to "http://localhost:4200/#/authenticate/login-token/#{ @user.login_token }", "http://localhost:4200/#/authenticate/login-token/#{ @user.login_token }" %>
